Changes to mobile version to accomodate for IOS webkit issues (Scrolling gallery converted to fixed one on mobile) part 2

--- a/Pages/SRC/srcstyles.css
+++ b/Pages/SRC/srcstyles.css
@@ -479,7 +479,7 @@ p.title2 {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 20000000px) {
   html {
     font-size: 80%;
     overflow-x: hidden;
